--- a/index.html
+++ b/index.html
@@ -113,19 +113,13 @@
                     <h4>2023 - 2024</h4>
                     <p>
                         <ul>
-                            <li>- Provided exceptional guest service as both a Bell Boy and Receptionist at Caesar Resort.</li>
-                            <br>
-                            <br>
-                            <li>- Welcomed guests with warmth and assisted with luggage, ensuring a smooth arrival experience.</li>
+                            <li>- Provided exceptional guest service as Receptionist at Caesar Resort.</li>
                             <br>
                             <br>
                             <li>- Managed check-in and check-out processes efficiently, using resort systems to coordinate room assignments.</li>
                             <br>
                             <br>
                             <li>- Collaborated with housekeeping and maintenance teams to maintain high standards of cleanliness and functionality.</li>
-                            <br>
-                            <br>
-                            <li>- Addressed guest concerns promptly and professionally, enhancing overall guest satisfaction.</li>
                             <br>
                             <br>
                             <li>- Demonstrated strong communication and teamwork skills in a fast-paced hospitality environment.</li>
