--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
                 <div class="contact">
 
-                    <a href="https://sadramj.github.io/Profile/" class="socialMedia">
+                    <a href="https://sadra-mj.github.io/Contactme/" class="socialMedia">
                         My Social Media
                     </a>
                     <br>
