--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sadra Jahromi</title>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="x-icon" href="assets/img/curriculum-vitae.png">
 </head>
@@ -85,7 +86,11 @@
                             <br>
                             <h4>2023 - 2024</h4>
                             <hr>
-                            <p>Took CS50x Course certificate from Harvard University (USA)</p>
+                            <p>
+                                Took CS50x Course certificate from Harvard University (USA)
+                                <br>
+                                <img src="CS50x-SadraJahromi.png" alt="certificate">
+                            </p>
                             <br>
                             <br>
                             <h4>Languages</h4>
@@ -100,6 +105,7 @@
 
                         </div>
                     </div>
+                    <br>
                </section>
 
 
