--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
                             <br>
                             <ul>
                                 <li><span>Persian</span></li>
-                                <li><span>Engli</span>sh</li>
-                                <li><span>Ru</span>ssian</li>
+                                <li><span>English</span></li>
+                                <li><span>Rus</span>sian</li>
+                                <li><span>Tur</span>kish</li>
                             </ul>
                             </div>
 
